# crc

./: .gitignore  .landscape.yml  .pre-commit-config.yaml  .travis.yml  404.html  LICENSE.txt  README.md  README.rst  appveyor.yml  cli_tests.py  crc.py  crc_tests.py  index.html  noxfile.py  objects.inv  pylintrc  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tasks.py  test-requirements.txt  tests.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: other.md
.github/actions/python-environment/: action.yml
.github/workflows/: checks.yml  ci-cd.yml  ci.yml  coverage.yml  gh-pages.yml  lint.yaml  pr-merge.yml  unit.yaml
api/abstract_register/: index.html
api/basic_register/: index.html
api/calculator/: index.html
api/configuration/: index.html
api/crc16/: index.html
api/crc32/: index.html
api/crc64/: index.html
api/crc8/: index.html
api/register/: index.html
api/table_based_register/: index.html
changelog/changes_2.0.0/: index.html
changelog/changes_3.0.0/: index.html
changelog/changes_3.0.1/: index.html
changelog/changes_4.0.0/: index.html
changelog/changes_4.1.0/: index.html
changelog/changes_4.2.0/: index.html
changelog/changes_4.3.0/: index.html
changelog/changes_5.0.0/: index.html
changelog/changes_6.0.0/: index.html
changelog/changes_6.1.0/: index.html
changelog/changes_6.1.1/: index.html
changelog/changes_6.1.2/: index.html
changelog/changes_7.0.0/: index.html
changelog/changes_7.1.0/: index.html
changelog/unreleased/: index.html
cli/: index.html
configurations/: index.html
contributors/: index.html
crc/: __init__.py  crc.py  lookup_tables.py  tests.py  tests_bench.py  tools.py
crc/test/: __init__.py  crc_tests.py
crc/test/tools/: __init__.py
crc/tools/: __init__.py  crc.py  table_generator.py
development/: index.html
development/release/: index.html
development/setup/: index.html
docs/: Makefile  conf.py  index.rst  license.rst  make.bat  mkdocs.yml
docs/docs/: cli.md  contributors.md  index.md  release-notes.md
docs/docs/api/: abstract_register.md  basic_register.md  calculator.md  configuration.md  crc16.md  crc32.md  crc64.md  crc8.md  register.md  table_based_register.md
docs/docs/changelog/: changes_2.0.0.md  changes_3.0.0.md  changes_3.0.1.md  changes_4.0.0.md  changes_4.1.0.md  changes_4.2.0.md  changes_4.3.0.md  changes_5.0.0.md  changes_6.0.0.md  changes_6.1.0.md  changes_6.1.1.md  changes_6.1.2.md  changes_7.0.0.md  changes_7.1.0.md  unreleased.md
docs/docs/development/: release.md  setup.md
docs/scripts/: configurations.py
release-notes/: index.html
search/: search_index.json
src/crc/: __init__.py  __main__.py  _crc.py
test/bench/: benches.py  test_bench.py
test/integration/: test_cli.py
test/regression/: calculator_checksum_test.py
test/unit/: test_crc.py
test/unit/regression/: test_unstable_digest.py
