[tool.poetry]
name = "crc"
version = "4.1.0"
description = "Library and CLI to calculate and verify all kinds of CRC checksums"
packages = [
    { include = "crc.py" },
]
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
maintainers = ["Nicola Coretti <nico.coretti@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
]
keywords = ['CRC', 'CRC8', 'CRC16', 'CRC32', 'CRC64']
repository = "https://github.com/Nicoretti/crc"

[tool.poetry.urls]
"Homepage" = "https://nicoretti.github.io/crc/"
"Documentation" = "https://nicoretti.github.io/crc/"
"Source" = "https://github.com/Nicoretti/crc"
"Issues" = "https://github.com/Nicoretti/crc/issues"
"Changelog" = "https://nicoretti.github.io/crc/changelog/unreleased/"

[tool.poetry.scripts]
crc = "crc:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pylint = "^2.12.2"
black = "^22.1.0"
isort = "^5.10.1"
coveralls = "^3.3.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.6"
pyupgrade = "^3.2.2"
shed = "^0.10.7"
mypy = "^0.991"
invoke = "^2"
mkdocs-autorefs = "^0.4.1"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.2"
pytkdocs = "^0.16.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = [
    "crc",
]

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.pylint.message_control]
disable = "C0330, C0326"

[tool.black]
line-length = 88
verbose = true
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2
skip = [".gitignore", "venv", ".nox"]
