[project]
name = "crc"
version = "7.1.0"
description = "Pure Python CRC library"
authors = [{ name = "Nicola Coretti", email = "nico.coretti@gmail.com" }]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = "BSD-2-Clause"
maintainers = [{ name = "Nicola Coretti", email = "nico.coretti@gmail.com" }]
keywords = [
    "CRC",
    "CRC8",
    "CRC16",
    "CRC32",
    "CRC64",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Nicoretti/crc"
Homepage = "https://nicoretti.github.io/crc/"
Documentation = "https://nicoretti.github.io/crc/"
Source = "https://github.com/Nicoretti/crc"
Issues = "https://github.com/Nicoretti/crc/issues"
Changelog = "https://nicoretti.github.io/crc/changelog/unreleased/"

[project.scripts]
crc = "crc._crc:main"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pylint>=2.12.2",
    "black>=22.1.0",
    "isort>=5.10.1",
    "coveralls>=3.3.1",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.6",
    "mypy>=0.991",
    "invoke>=2",
    "mkdocs-autorefs>=0.4.1",
    "mkdocstrings>=0.20.0",
    "mkdocstrings-python>=0.8.2",
    "pre-commit>=3.1.1,<4",
    "mkdocs-gen-files>=0.5.0,<0.6",
    "hatch>=1.14.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/crc"]

[tool.hatch.build.targets.wheel]
include = ["src/crc"]

[tool.hatch.build.targets.wheel.sources]
"src/crc" = "crc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = [
    "crc",
]

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.black]
line-length = 88
verbose = true
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2
skip = [".gitignore", "venv", ".venv", ".nox"]

[tool.mypy]
strict = true
show_column_numbers = true
show_error_context = true
